--- a/trillo/sass/_layout.scss
+++ b/trillo/sass/_layout.scss
@@ -30,11 +30,18 @@
 
   // grow/shrink/basis
   flex: 0 0 18%;
+
+  // sidebar内の縦のflex。flex-directionをcolumnにしているので、上下に配置される。
+  // side-navが上、legalが下。
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hotel-view {
   background-color: #fff;
   background-color: orangered;
+  height: 80rem;
 
   // flex-grow: 1 で、余ったスペース全部になる。
   flex: 1;
