--- a/trillo/css/style.css
+++ b/trillo/css/style.css
@@ -25,7 +25,8 @@ Grey dark 3: #999
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
-  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3); }
+  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  --shedow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06); }
 
 * {
   margin: 0;
@@ -78,7 +79,24 @@ body {
 
 .hotel-view {
   background-color: #fff;
-  height: 80rem;
+  flex: 1; }
+
+.detail {
+  padding: 4.5rem;
+  background-color: var(--color-grey-light-1);
+  border-bottom: 1px solid var(--color-grey-light-2);
+  display: flex; }
+
+.description {
+  font-size: 1.4rem;
+  background-color: #fff;
+  box-shadow: var(--shedow-light);
+  padding: 3rem;
+  margin-right: 4.5rem;
+  flex: 0 0 60%; }
+
+.user-reviews {
+  background-color: olivedrab;
   flex: 1; }
 
 .logo {
