--- a/trillo/sass/_layout.scss
+++ b/trillo/sass/_layout.scss
@@ -40,7 +40,33 @@
 
 .hotel-view {
   background-color: #fff;
-  height: 80rem;
+
+  // flex-grow: 1 で、余ったスペース全部になる。
+  flex: 1;
+}
+
+.detail {
+  padding: 4.5rem;
+  background-color: var(--color-grey-light-1);
+  border-bottom: 1px solid var(--color-grey-light-2);
+
+  // description と user-reviews のflex。
+  display: flex;
+}
+
+.description {
+  font-size: 1.4rem;
+  background-color: #fff;
+  box-shadow: var(--shedow-light);
+  padding: 3rem;
+  margin-right: 4.5rem;
+
+  // grow/shrink/bases
+  flex: 0 0 60%;
+}
+
+.user-reviews {
+  background-color: olivedrab;
 
   // flex-grow: 1 で、余ったスペース全部になる。
   flex: 1;
