--- a/trillo/sass/_components.scss
+++ b/trillo/sass/_components.scss
@@ -327,3 +327,78 @@
     outline: none;
   }
 }
+
+// PARAGRAPH
+// .paragraph:not(:last-child) {
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem;
+}
+
+// LIST
+.list {
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-top: 1px solid var(--color-grey-light-2);
+  border-bottom: 1px solid var(--color-grey-light-2);
+
+  // flex-wrap で折り返しが効くようにする。
+  display: flex;
+  flex-wrap: wrap;
+
+  &__item {
+    margin-bottom: 0.7rem;
+
+    // basis: 50% にしているので、2列に並ぶ
+    flex: 0 0 50%;
+  }
+
+  &__item::before {
+    content: '';
+    display: inline-block;
+    height: 1rem;
+    width: 1rem;
+    margin-right: 0.7rem;
+
+    // これは古いやり方らしい
+    // background-image: url(../img/chevron-thin-right.svg);
+    // background-size: cover;
+
+    // 新しいやり方。こっちだと色を変えられるらしい。
+    background-color: var(--color-primary);
+    -webkit-mask-image: url(../img/chevron-thin-right.svg);
+    -webkit-mask-size: cover;
+    mask-image: url(../img/chevron-thin-right.svg);
+    mask-size: cover;
+  }
+}
+
+// RECOMMEND
+.recommend {
+  font-size: 1.3rem;
+  color: var(--color-grey-dark-3);
+
+  display: flex;
+  align-items: center;
+
+  &__count {
+    margin-right: auto;
+  }
+
+  &__friends {
+  }
+
+  &__photo {
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+
+    // content-boxに戻せば、borderが外側につく
+    box-sizing: content-box;
+    border: 3px solid #fff;
+
+    &:not(:last-child) {
+      margin-right: -1.15rem;
+    }
+  }
+}
